index.html edit, app.js done

--- a/src/index.html
+++ b/src/index.html
@@ -4,23 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="bootstrap.css">
 </head>
 <body>
     <div class="container">
         <div class="hurnegyszogForm">
             <div class="input">
-                <label for="sideA" class="form-label">Oldal</label>
+                <label for="sideA" class="form-label">A Oldal</label>
                 <input type="text" id="sideA" class="form-control" required>
 
-                <label for="sideB" class="form-label">Oldal</label>
+                <label for="sideB" class="form-label">B Oldal</label>
                 <input type="text" id="sideB" class="form-control" required>
 
-                <label for="sideC" class="form-label">Oldal</label>
+                <label for="sideC" class="form-label">C Oldal</label>
                 <input type="text" id="sideC" class="form-control" required>
 
-                <label for="sideD" class="form-label">Oldal</label>
+                <label for="sideD" class="form-label">D Oldal</label>
                 <input type="text" id="sideD" class="form-control" required>
                 
                 <div>
