--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,26 @@
+<!--
+File: index.html
+Author: Dobány Norbert
+Copyright: 2024, Dobány Norbert
+Group: Szoft I / 1 /N
+Date: 2024-03-07
+Github: https://github.com/notdefinitelynot/
+Licenc: GNU GPL
+-->
+
 <!DOCTYPE html>
 <html lang="hu">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>hurnegyter</title>
     <link rel="stylesheet" href="bootstrap.css">
 </head>
 <body>
     <div class="container">
         <div class="hurnegyszogForm">
             <div class="input">
-                <label for="sideA" class="form-label">A Oldal</label>
+                <label for="sideA" class="form-label mt-3">A Oldal</label>
                 <input type="text" id="sideA" class="form-control" required>
 
                 <label for="sideB" class="form-label">B Oldal</label>
@@ -23,7 +33,7 @@
                 <input type="text" id="sideD" class="form-control" required>
                 
                 <div>
-                    <button id="calcButton" class="btn btn-primary">Számít</button>
+                    <button id="calcButton" class="btn btn-primary mt-2">Számít</button>
                 </div>
 
                 <label for="area" class="form-label">Terület</label>
