index.html text

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,8 @@ Licenc: GNU GPL
 <body>
     <div class="container">
         <div class="hurnegyszogForm">
+            <h1>Húrnégyszög terület számító</h1>
+            <h3>Adja meg az oldalakat!</h3>
             <div class="input">
                 <label for="sideA" class="form-label mt-3">A Oldal</label>
                 <input type="text" id="sideA" class="form-control" required>
